# comicImg2pdfpy

./: .gitignore  README.md  cli.spec  pyproject.toml
img2pdfpy/: cli.py
